--- a/AudioSampler/Properties/Resources.resx
+++ b/AudioSampler/Properties/Resources.resx
@@ -121,6 +121,12 @@
   <data name="Black_Pad" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Black Pad.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DisplayBackgroundCollapsed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DisplayBackgroundCollapsed.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FXBoxBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FXBoxBackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="TogglePanelButtonDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TogglePanelButtonDown.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
