--- a/AudioSampler/Properties/Resources.resx
+++ b/AudioSampler/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Black_Pad" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Black Pad.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Black_Pad_Selected" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Black Pad_Selected.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="DisplayBackgroundCollapsed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DisplayBackgroundCollapsed.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -135,5 +138,8 @@
   </data>
   <data name="Yellow_Pad" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Yellow Pad.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Yellow_Pad_Selected" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Yellow Pad_Selected.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
